# bazel-openssl-cc

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  BUILD.configs.bazel  BUILD.openssl.bazel  BUILD.pregen.bazel  BUILD.test.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  batch_dofile.pl  buildinf.h.in  collate_into_directory.bzl  collate_into_directory.cc  common.py  configdata.pm.in  download-buildifier.ps1  download-buildifier.sh  extract_srcs.pl  generate.py  generate_combine_platforms.py  generate_constants.py  generate_per_platform.py  move_file_and_strip_prefix.bat  move_file_and_strip_prefix.sh  openssl_genrule.bzl  patch_bcr_pregen.py  perl_generate_file.ps1  perl_generate_file.py  perl_generate_file.sh  perl_genrule.bzl  pregen.bzl  sha256_test.cc  sha256_test.py  utils.bzl
.github/workflows/: pr.yaml  release.yaml
